--- a/index.html
+++ b/index.html
@@ -5,8 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoes shop</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
+    <div class="container red" id="primascarpa">
+
+        <div class="elements">
+
+            <div class="image"><img src="img/01.png" alt="scarpe"></div>
+            <div class="text-top text-yellow"><span>Il nostro modello</span></div>
+            <div class="text-bottom text-yellow"><span>di punta</span></div>
+
+
+        </div>
+
+    </div>
+
+    <div class="container green" id="secondascarpa">
+
+        <div class="elements">
+
+            <div class="image"><img src="img/02.png" alt="scarpe"></div>
+            <div class="text-top text-yellow"><span>Il nostro modello</span></div>
+            <div class="text-bottom text-yellow"><span>di punta</span></div>
+
+
+        </div>
+
+    </div>
+
+    <div class="container yellow" id="terzascarpa">
+
+        <div class="elements">
+
+            <div class="image"><img src="img/03.png" alt="scarpe"></div>
+            <div class="text-top text-green"><span>Il nostro modello</span></div>
+            <div class="text-bottom text-green"><span>di punta</span></div>
+
+
+        </div>
+
+    </div>
+
+    <div class="link-dinamico">
+
+        <ul>
+
+            <li><a href="#primascarpa">1</a></li>
+            <li><a href="#secondascarpa">2</a></li>
+            <li><a href="#terzascarpa">3</a></li>
+    
+        </ul>
+
+    </div>
+
 </body>
 </html>
